--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,6 @@
 {
-  "welcome": "welcome to react"
+  "welcome": "welcome to react",
+  "categories":"categories",
+  "subcategories" : "subcategories"
+
 }
