--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -27,7 +27,11 @@
   "Category Title" : "عنوان الفئه",
   "Product Title" :"عنوان المنتج",
   "Product Descreption":"وصف المنتج",
-  "show Product":" عرض المنتج"
+  "show Product":" عرض المنتج",
+  "Main":"الرئيسيه",
+  "Contact us" : "تواصل معنا ",
+  "Categorys":"الفئات",
+  "Products":"المنتجات"
 
   
 
